--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,3 +18,7 @@ spring:
       generate-ddl: true
       show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
+  security:
+    user:
+      name: 1987diegog
+      password: admin
